--- a/index.css
+++ b/index.css
@@ -107,48 +107,37 @@ p{
     -moz-transform: skewY(-3deg);
     -ms-transform: skewY(-3deg);
 }
-/* Utilities */
-.container {
-    max-width: 1100px;
-    margin: 0 auto;
-    overflow: auto;
-    padding: 0 40px; 
+/*stats*/
+.stats {
+    padding-top: 100px;
+
 }
-.card {
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    padding:  20px;
-    margin: 10px;
+.stats-heading {
+    max-width: 500px;
+    margin: auto;
 }
-.btn {
-    display: inline-block;
-    padding: 10px 30px;
-    cursor: pointer;
-    background: var(--primary-color);
-    color: #fff;
-    border: none;
-    border-radius: 5px;
+.stats .grid h3{
+    font-size: 35px;
+}
+.starts .grid p {
+    font-size: 20px;
+    font-weight: bold;
+} 
+
+/*cli*/
+.cli .grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 }
 
-.btn-outline {
-    background-color: transparent;
-    border: 1px #fff;
+.cli .grid > *:first-child {
+    grid-column: 1 / span 2;
+    grid-row:  1 / span 2;
+    width: 700px;
+    height: 250px;
 }
-.btn:hover {
-    transform: scale(0.98);
-}
-.flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-.grid {
-    display: grid;
-    grid-template-columns:repeat(2, 1fr);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+
+/*cloud*/
+.cloud .grid{
+    grid-template-columns: 4fr 3fr;
 }
