--- a/index.css
+++ b/index.css
@@ -2,6 +2,12 @@
 
 :root {
     --primary-color: #047aed;
+    --secondary-color: #1c3fa8;
+    --dark-color:#002240;
+    --light-color:#f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
+
 }
 * {
     box-sizing: border-box;
@@ -11,7 +17,7 @@
 body {
     font-family: 'Lato', sans-serif;
     color: #333;
-    line-height: 2;
+    line-height: 1.6;
 
 }
 ul {
@@ -23,12 +29,20 @@ a {
 }
 h1, h2 {
     font-weight: 300;
-    line-height: 1.6;
+    line-height: 1.2;
     margin: 10px 0;
 }
 p{
     margin: 10px 0
 } 
+img{
+    width: 100%;
+}
+code, pre {
+    background: #333;
+    color: #fff;
+    padding: 10px;
+}
 .navbar {
     background-color: var(--primary-color);
     color: #fff;
@@ -63,10 +77,12 @@ p{
 }
 .showcase .grid {
     overflow: visible;
-    grid-template-columns: 55% 45%;
+    grid-template-columns: 55% auto;
     gap: 30px;
 }
-
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
+}
 .showcase-form {
     position: relative;
     top: 60px;
@@ -75,6 +91,7 @@ p{
     padding: 40px;
     justify-self:flex-end;
     z-index: 100;
+    animation: slideInFromRight 1s ease-in;
 }
 
 .showcase-form .form-control {
@@ -110,6 +127,7 @@ p{
 /*stats*/
 .stats {
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
 
 }
 .stats-heading {
@@ -133,11 +151,161 @@ p{
 .cli .grid > *:first-child {
     grid-column: 1 / span 2;
     grid-row:  1 / span 2;
-    width: 700px;
-    height: 250px;
 }
 
 /*cloud*/
 .cloud .grid{
     grid-template-columns: 4fr 3fr;
+    
 }
+
+
+/*languages*/
+
+.languages .flex {
+    flex-wrap: wrap;
+}
+.languages .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+    transition: transform 0.2s ease-in;
+}
+.languages .card h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.languages .card:hover{
+    transform: translateY(-15px);
+}
+
+/* features */
+.features-head img, .docs-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+.features-main .card > i {
+margin-right: 20px;
+}
+.features-main .grid{
+    padding: 30px;
+}
+    
+
+.features-main .grid > *:first-child{
+    grid-column: 1 / span 3;
+}
+.features-main .grid > *:nth-child(2){
+    grid-column: 1 / span 2;
+}
+
+/* Docs */
+.docs-main h3 {
+    margin: 20px 0;
+    padding-left: 12px;
+}
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #ccc solid;
+    padding-left: 10px;
+}
+/*footer*/
+.footer .social a {
+    margin: 0 10px;
+}
+/* Animations */
+@keyframes slideInFromLeft {
+    0% {
+        transform:translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+
+}
+@keyframes slideInFromRight {
+    0% {
+        transform:translateX(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes slideInFromTop {
+    0% {
+        transform:translateY(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+@keyframes slideInFromBottom {
+    0% {
+        transform:translateY(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+/*tablets and under*/
+@media(max-width: 768px){
+    .grid, 
+    .showcase .grid, 
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid, .features-main .grid, 
+.docs-main .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+    .showcase {
+        height: auto;
+    }
+    .showcase-text {
+        text-align: center;
+        margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
+    }
+    .showcase-form {
+        justify-self: center;
+        margin: auto; 
+        animation: slideInFromBottom 1s ease-in;
+    }
+    .cli .grid > *:first-child {
+        grid-column: 1;
+        grid-row:  1;
+}
+.features-head, .features-sub-head,
+.docs-head img {
+    text-align: center;
+}
+
+.features-main .grid >*:first-child,
+.features-main .grid > *:nth-child(2) {
+    grid-column: 1;
+}
+/*mobile*/
+@media(max-width: 500px) {
+    .navbar {
+        height: 110px;
+    }
+    .navbar .flex {
+        flex-direction: column;
+    }
+    .navbar ul {
+        padding: ul;
+        background-color: rgba(0, 0, 0, 0.1);
+
+    }
+}}
